tests/samples/valid/length_of_string.pn
fn length_of(x: []u8) -> usize
{
	var y = |x|;
	return: y
}

const TEXT: [12]u8 = "Hello world!";

fn main() -> usize
{
	var subtext = "Hello world!";
	var x = length_of(TEXT);
	var y = length_of(subtext);
	var z = length_of("Hello world!");
	var result = 140 + x + y + z + |TEXT| + |subtext|;
	return: result
}
